--- a/_sass/utilities/_resets.scss
+++ b/_sass/utilities/_resets.scss
@@ -28,6 +28,7 @@ body {
 
 h1 {
     font-size: $base-font-size * 3;
+    line-height: 1.5;
 }
 h2 {
     font-size: $base-font-size * 2;
@@ -42,6 +43,9 @@ h5 {
     font-size: $base-font-size * 1.125;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2;
+}
 
 /**
 * Set `margin-bottom` to maintain vertical rhythm
