--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 2;
+$base-line-height: 1.8;
 
 $spacing-unit:     30px;
 
